# BTDB2_SIMULATOR

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tag.yml  test.yml
b2sim/engine/: farms.py  info.py  main.py
experiments/: foo.ipynb  stream.ipynb
notebooks/: base_experiment.ipynb  eco_queue_correction.ipynb  experiment.ipynb  quality_soil_test.ipynb  utils.py
notebooks/logs/: base_experiment_log.txt  eco_queue_correction_test_log.txt  quality_soil_test_log.txt
src/b2sim/engine/: info.py  main.py  rounds.py
src/b2sim/templates/: eco_send_info.csv
tests/: test_eco_queue.py  test_engine.py
tutorials/: 2_using_queues.ipynb
tutorials/logs/: using_queues.txt
